--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "hoangphi/vietnam-maps": "^1.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "prettus/l5-repository": "^2.7"
