--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/upload.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
