--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.32.0",
         "sass-loader": "^8.0.2"
+    },
+    "dependencies": {
+        "cropperjs": "^1.5.11",
+        "jquery-cropper": "^1.0.1"
     }
 }
