--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "cropperjs": "^1.5.11",
-        "jquery-cropper": "^1.0.1"
+        "jquery-cropper": "^1.0.1",
+        "tempusdominus-bootstrap-4": "^5.39.0"
     }
 }
