--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "hoangphi/vietnam-maps": "^1.1",
         "laravel/framework": "^8.12",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
+        "laravelcollective/html": "^6.2",
         "league/flysystem-aws-s3-v3": "^1.0",
         "prettus/l5-repository": "^2.7"
     },
