--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "hoangphi/vietnam-maps": "^1.1",
         "laravel/framework": "^8.12",
         "laravel/socialite": "^5.2",
+        "laravel/telescope": "^4.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.2",
         "laravelcollective/html": "^6.2",
