added postgres database configuration

--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     },
     "dependencies": {
         "cropperjs": "^1.5.11",
+        "heroku": "^7.52.0",
         "jquery-cropper": "^1.0.1",
         "tempusdominus-bootstrap-4": "^5.39.0"
+    },
+    "engines": {
+        "node": "14.x"
     }
 }
