--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "tempusdominus-bootstrap-4": "^5.39.0"
     },
     "engines": {
-        "node": "14.x"
+        "node": "14.x",
+        "npm": "7.x"
     }
 }
