[Host] Lập hóa đơn

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@ public/images/
 public/assets/
 public/admin/
 public/vendor/
+public/daterangepicker/
 public/tempusdominus-bootstrap-4/
 public/mix-manifest.json
