--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "cropperjs": "^1.5.11",
+        "daterangepicker": "^3.1.0",
         "heroku": "^7.52.0",
         "jquery-cropper": "^1.0.1",
         "tempusdominus-bootstrap-4": "^5.39.0"
