--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "dependencies": {
         "cropperjs": "^1.5.11",
         "daterangepicker": "^3.1.0",
-        "heroku": "^7.52.0",
+        "heroku": "^7.2.0",
         "jquery-cropper": "^1.0.1",
+        "select2": "*",
         "tempusdominus-bootstrap-4": "^5.39.0"
     },
     "engines": {
