--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "dependencies": {
         "cropperjs": "^1.5.11",
         "daterangepicker": "^3.1.0",
-        "heroku": "^7.2.0",
+        "heroku": "^7.0.9",
         "jquery-cropper": "^1.0.1",
         "select2": "*",
         "tempusdominus-bootstrap-4": "^5.39.0"
     },
     "engines": {
-        "node": "14.x"
+        "node": "14.x",
+        "npm": "7.x"
     }
 }
