--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "laravel/ui": "^3.2",
         "laravelcollective/html": "^6.2",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "prettus/l5-repository": "^2.7"
+        "prettus/l5-repository": "^2.7",
+        "pusher/pusher-php-server": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
