--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "daterangepicker": "^3.1.0",
         "heroku": "^7.0.9",
         "jquery-cropper": "^1.0.1",
+        "laravel-echo": "^1.10.0",
+        "pusher-js": "^7.0.3",
         "select2": "*",
         "tempusdominus-bootstrap-4": "^5.39.0"
     },
